--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
     padding: 0%;
 }
 
-/* body{
-    background-color: rgb(53, 52, 52);
-} */
+ body{
+    background-color: rgb(0, 0, 0);
+} 
 
 #header{
     background-color: rgb(0, 0, 0);
